static/css/styles.scss
/* ... */
.wrapper {
  background: none;
  width: 100%;
}

.inner-wrapper {
  background-color: transparent ;
  background-image: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  margin: 0 auto;
  padding-bottom: 0;
  float: none;
  overflow: hidden;
}

.row {
  background: none;
  border: 0;
}

p, li {
  font-size: 1em;
  line-height: 1.5;
  margin: 0;
  margin-bottom: .75em;
  padding: 0;
}

ol+h2, p+h2, pre+h2, ul+h2 { margin-top: .563em; }
ol+h3, p+h3, pre+h3, ul+h3 { margin-top: .783em; }
ol+h4, p+h4, pre+h4, ul+h4 { margin-top: 1.219em; }

blockquote.pull-quote p {

  color: $cool_grey;
  padding-left: 10px;
  padding-right: 10px;
  font-size: 0.813em;
  text-indent: -0.4em;

  span {
    font-weight: bold;
    color: #dd4814;
    line-height: 0;
    position: relative;
    left: -5px;
  }
  span + span { left: 5px; } /* the second span */

  cite {
    font-size: .75em;
    text-indent: -14px;
  }

}

#menu {
  display: block;
}

/* @section header
-------------------------------------------------------------- */
header.banner {
  border-bottom: none;
  overflow: hidden;

  .nav-primary.nav-right .logo a {
    @include background_size(130px 19px);
    background-image: url(https://assets.ubuntu.com/v1/2eec3fd9-logo.svg);
    background-position: 0 15px;
    background-repeat: no-repeat;
    min-width: 127px;
    padding-top: 10px;

    img {
      display: none;
    }
  }

  .nav-primary ul li a,
  .nav-primary ul li a:link,
  .nav-primary ul li a:visited {
    font-weight: 400;
  }
}

.opera-mini header.banner .logo a,
.no-svg header.banner .logo a {
  background-image: url(https://assets.ubuntu.com/v1/7425169d-logo.png);
}

/* @section heros
-------------------------------------------------------------- */
#main-content .row-hero {
  padding-bottom: 0;
  .intro {
    font-size: 16px;
  }
}

body.services #main-content .row-hero { background-position: 0 -1200px; }
body.contact #main-content .row-hero 	{ background-position: 0 -2400px; }

#main-content .row-hero .intro-content h2 {	font-size: 45px; }

#main-content .row-hero .intro-content .intro {
  font-size: 32px;
  line-height: 1.3;
}

#main-content .row-hero .intro-content {
  position: absolute;
  bottom: 0;
  left: 40px;
}

p.intro {
  line-height: 1.5;
}

/* @section footer
-------------------------------------------------------------- */
// TODO: consider inclusion in canonical-vanilla-theme
.footer {
  background: none;
  box-shadow: inset 0  4px 6px -4px rgba(0, 0, 0, .4);
}

footer #nav-global {
  margin-top: -1px;
}

ol.connected-list {
  li:after {
    -ms-transform: rotate(117deg);
    -webkit-transform: rotate(117deg);
    left: 81%;
    top: 86%;
    transform: rotate(117deg);
    width: 200px;
    z-index: 0;
  }

  li:nth-child(2):after {
    -ms-transform: rotate(-110deg);
    -webkit-transform: rotate(-110deg);
    left: -31%;
    transform: rotate(-110deg);
    width: 230px;
  }
}

.connected-list h3 {
  line-height: 1.5;
  font-weight: normal;
  font-size: 1em;
}

.connected-list li p {
  font-size: 1em;
}

.external {
  @include background_size(.7em .7em);
  padding-right: .9em;
  background-image: url(https://assets.ubuntu.com/v1/71a7de8f-external-link-orange.svg), none;
  background-position: right 1px;
  background-repeat: no-repeat;
}
.opera-mini .external,
.no-svg .external { background-image: url(https://assets.ubuntu.com/v1/1dc31c47-external-link-orange.png); }

.row-companies {
  background-color: $white;

  ul {
    float: none;
    margin-left: 0;
    padding: 0;
    text-align: center;
  }

  ul li {
    display: inline-block;
    float: none;
    margin: 0 0 10px 0;
    padding-left: 10px;
    padding-right: 10px;
    height: 50px;
  }

  ul li h3 {
    font-size: 16px;
  }

  ul li.last-item {
    border: 0;
  }

  ul li img {
    float: left;
    margin-bottom: 0;
    height: 100%;
    width: auto;
  }

  ul li.last-item img {
    padding-right: 0;
  }
}

/* image classes
----------------------------------------------------------- */
div.box-image-centered span img,
div.row-image-centered span img,
div.row.row-image-centered span img,
img {
  &.priority-0 {
    display: none;

    @media only screen and (min-width : 768px) {
      display: inline-block;
    }
  }
}

div.box-image-centered div,
div.box-image-centered span,
div.row-image-centered div,
div.row-image-centered span,
div.row.row-image-centered div,
div.row.row-image-centered span {
  display: inline-block;
}

.priority-0 {
  display: none;

  @media only screen and (min-width : 768px) {
    display: block;
  }
}

/* @section contextual footer
-------------------------------------------------------------- */
.row-contextual-footer {
  .vertical-divider > div {
    border-bottom: 1px dotted $warm_grey;
    margin-bottom: 10px;
    padding-bottom: 10px;
  }

  .vertical-divider .last-col {
    border-bottom: 0;
  }
}
/* ... */

